null check, simplfy code, use switch on some case